[tool.poetry]
name = "opensettlenet-common"
version = "0.1.0"
description = ""
authors = ["Nigel Daniels <nigel@opensettlenet.com>, Linus Mixson <linus@opensettlenet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.1.0"
xmltodict = "^0.13.0"
scapy = "^2.5.0"
pydantic = {extras = ["dotenv"], version = "^2.5.2"}


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
types-xmltodict = "^0.13.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
