[tool.poetry]
name = "opensettlenet-common"
version = "0.1.0"
description = ""
authors = ["Nigel Daniels <nigel@opensettlenet.com>, Linus Mixson <linus@opensettlenet.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
attrs = "^23.1.0"
xmltodict = "^0.13.0"
scapy = "^2.5.0"
pydantic = {extras = ["dotenv"], version = "^2.5.2"}
pytest-datadir = "^1.5.0"
validators = "^0.22.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
types-xmltodict = "^0.13.0.3"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
